# starter-template

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer.md  tester.md
.claude/docs/: CONTRIBUTING.md  TESTING_STRATEGY.md
.claude/hooks/: check-debug.sh
.claude/scripts/: worktree-cleanup.sh  worktree-create.sh
.claude/skills/implement/: SKILL.md
.claude/skills/pre-submit-pr/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/workflows/: pre-commit.yaml  pytest.yaml
