[project]
name = "starter-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "RUF"]
ignore = [
    "E731",
    "D",         # Disable pydocstyle checks
    "ANN",       # Disable missing type annotation checks
    "COM",       # Disable flake8-commas
    "E402"       # Disable module level import not at top of file
]

[tool.ruff.lint.isort]
lines-after-imports = 2
